<resources>
    <string name="app_name">OpenWeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="next_forecast">Next forecast</string>
    <string name="today">Today</string>
    <string name="condition_of_city">Condition of city</string>
    <string name="info_temperature" translatable="false">°</string>
    <string name="get_my_current_location">Get my current location</string>
    <string name="search_city_weather">Search city weather</string>
    <string name="city_info">City info</string>
    <string name="weather_status">Weather status</string>
    <string name="feels_like_30">feels like</string>
    <string name="wind_icon_image">Wind icon image</string>
    <string name="humidity_icon_image">Humidity icon image</string>
    <string name="logo_image">Logo image</string>
    <string name="info_menu_text">Weather</string>
    <string name="settings_menu_text">Settings</string>
    <string name="change_theme_text">Change theme</string>
    <string name="language_settings">Language</string>
    <string name="weather_condition">condition is</string>
    <string name="weather_country">Location:</string>
</resources>